--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<footer>
     		<ul>
         		<li><a href="mailto:chrisminar@gmail.com">email</a></li>
-        		<li><a href="https://github.com/chrisminar">github.com/chrisminar</a></li>
+        		<li><a href="https://github.com/chrisminar">github</a></li>
         		<li><a href="https://www.linkedin.com/in/ChristopherMinar">Linkedin</a></li>
 			</ul>
 		</footer>
