--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Hank Quinlan, Horrible Cop</title>
+		<title>Chris Minar/title>
 		<!--link to main stylesheet -->
 		<link rel="stylesheet" type = "text/css" href = "/css/main.css">
 	</head>
@@ -17,7 +17,7 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Hi I'm Chris</h1>
-				<p>Some Stuff Here href="/about">Read more about my life...</a></p>
+				<p>Some Stuff Here <a href="/about">Read more about my life...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
