--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Chris Minar/title>
+		<title>Chris Minar</title>
 		<!--link to main stylesheet -->
 		<link rel="stylesheet" type = "text/css" href = "/css/main.css">
 	</head>
