--- a/resume/index.html
+++ b/resume/index.html
@@ -5,7 +5,7 @@ title: Chris Minar
 <div class="blurb">
 	<h1>Behold the power of LaTeX!</h1>
 	<p>
-	  <object data = "resume.pdf" type="application/pdf" width="100%" height = 100%">
+	  <object data = "resume.pdf" type="application/pdf" width="100%" height = "100%">
 	  <p> stuff here </p>
 	  </object>
 	<p>
