--- a/resume/index.html
+++ b/resume/index.html
@@ -4,9 +4,9 @@ title: Chris Minar
 ---
 <div class="blurb">
 	<h1>Behold the power of LaTeX!</h1>
-	<p>
 	  <object data = "resume.pdf" type="application/pdf" width="100%" height = "100%">
-	  <p> stuff here </p>
+	  <p>It appears you don't have a PDF plugin for this browser.
+  No biggie... you can <a href="resume.pdf">click here to
+  download the PDF file.</a></p>
 	  </object>
-	<p>
 </div><!-- /.blurb -->
