--- a/resume/index.html
+++ b/resume/index.html
@@ -9,4 +9,6 @@ title: Chris Minar
   No biggie... you can <a href="resume.pdf">click here to
   download the PDF file.</a></p>
 	  </object>
+	  <p>You can <a href="resume.pdf">click here to</p>
+  download the PDF file.</a></p>
 </div><!-- /.blurb -->
