--- a/resume/index.html
+++ b/resume/index.html
@@ -9,6 +9,5 @@ title: Chris Minar
   No biggie... you can <a href="resume.pdf">click here to
   download the PDF file.</a></p>
 	  </object>
-	  <p>You can <a href="resume.pdf">click here to</p>
-  download the PDF file.</a></p>
+	  <p>You can <a href="resume.pdf">click here to download the PDF file</p>
 </div><!-- /.blurb -->
