--- a/resume/index.html
+++ b/resume/index.html
@@ -9,5 +9,5 @@ title: Chris Minar
   No biggie... you can <a href="resume.pdf">click here to
   download the PDF file.</a></p>
 	  </object>
-	  <p>You can <a href="resume.pdf">click here to download the PDF file</p>
+	  <p><a href="resume.pdf">Resume Download</p>
 </div><!-- /.blurb -->
