--- a/about/index.html
+++ b/about/index.html
@@ -4,10 +4,10 @@ title: Chris Minar
 ---
 <div class="blurb">
 	<h1>About Me</h1>
-	<p>I'm currently a second year masters student in mechanical engineering at Oregon State University.     
-	My research is on GPU based computuation fluid dynamics.    
-	I expect to graduate in July of 2016.    
-	<a href="grad_expo_poster_2016_chris_minar.pdf" target="_blank">2016 Oregon State Grad Research Expo Poster</a>    
-	<a href="parallel_CFD_2016_paper.pdf" target="_blank">2016 Parallel Computing Conference Extended Abstract</a>    
+	<p>I'm currently a second year masters student in mechanical engineering at Oregon State University.     <br>
+	My research is on GPU based computuation fluid dynamics.    <br>
+	I expect to graduate in July of 2016.    <br>
+	<a href="grad_expo_poster-2016-chris-minar.pdf" target="_blank">2016 Oregon State Grad Research Expo Poster</a>    <br>
+	<a href="parallel_CFD_2016_paper.pdf" target="_blank">2016 Parallel Computing Conference Extended Abstract</a>    <br>
 	</p>
 </div><!-- /.blurb -->
