--- a/Game/index.html
+++ b/Game/index.html
@@ -3,6 +3,8 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 		<title>Unity Web Player | Lunatics</title>
+		<p>This is a little game I made while teaching myself how to code. Be warned it is pretty hard and quite frustrating.<br>
+		Press a to fire the left thruster and d to fire the right thruster. Try to get as high as you can!</p>
 		<script type='text/javascript' src='https://ssl-webplayer.unity3d.com/download_webplayer-3.x/3.0/uo/jquery.min.js'></script>
 		<script type="text/javascript">
 		<!--
